its comming together

--- a/templates/home.page.gohtml
+++ b/templates/home.page.gohtml
@@ -4,4 +4,8 @@
         <div>
             <h1>Home Page!</h1>
         </div>
+
+
+
+        <p>you are logged in : {{.Authenticated}}</p>
     {{end}}
