--- a/templates/base.layout.gohtml
+++ b/templates/base.layout.gohtml
@@ -6,12 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link rel="stylesheet" href="/static/styles/index.css"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="https://unpkg.com/notie/dist/notie.min.css">
     {{block "style" .}}{{end}}
 </head>
 <body>
-    {{template "header"}}
+    {{template "header" .}}
     {{block "content" .}}{{end}}
-    <script src="/static/scripts/index.js"></script>
+    <script src="/static/scripts/dist/index.js"></script>
+    <script src="https://unpkg.com/notie"></script>
     {{block "scripts" .}}{{end}}
 </body>
 </html>
