--- a/templates/login-form.partial.gohtml
+++ b/templates/login-form.partial.gohtml
@@ -1,8 +1,8 @@
 {{define "login-form"}}
 
     <form id="login-form">
-        <input type="text" placeholder="username"/>
-        <input type="password" placeholder="password"/>
+        <input type="text" placeholder="username" name="username"/>
+        <input type="password" placeholder="password" name="password"/>
         <input type="submit" value="Login!"/>
     </form>
 
