--- a/templates/users.partial.html
+++ b/templates/users.partial.html
@@ -16,6 +16,7 @@
 
 {{define "login-form"}}
 
+    {{if not .}}
     <form id="login-form" class="container">
         <div class="row">
             <input type="text" placeholder="username" name="username"/>
@@ -23,19 +24,23 @@
             <input class="button button-primary" type="submit" value="Login!"/>
         </div>
     </form>
+    {{end}}
 
 {{end}}
 
 {{define "register-form"}}
 
+
+    {{if not .}}
     <form id="register-form" class="container">
         <div class="row">
             <input type="text" placeholder="username" name="username"/>
             <input type="email" placeholder="email" name="email"/>
             <input type="password" placeholder="password" name="password"/>
-            <input type="password" placeholder="confirm password" name="password"/>
+            <input type="password" placeholder="confirm password" name="confirm-password"/>
             <input class="button button-primary" type="submit" value="Register!"/>
         </div>
     </form>
+    {{end}}
 
 {{end}}
