--- a/templates/about.page.html
+++ b/templates/about.page.html
@@ -1,7 +1,7 @@
 {{template "base" .}}
 
 {{define "content"}}
-
+<div class="row about-page">
     <h1>this is the about page!!!!</h1>
 
     <p>
@@ -9,5 +9,5 @@
         stuff about me???
     </p>
 
-
+</div>
 {{end}}
