suprisingly things are still working

--- a/templates/home.page.html
+++ b/templates/home.page.html
@@ -2,14 +2,9 @@
 
 {{define "content"}}
 <div class="row home-page">
-    <div class="col m2">
-         {{template "user-list" .Get.Users}}
-    </div>
-    <div class="col m10 splash">
-        <div>
-            <h1>ThoughtSea</h1>
-            <h6>What's on your mind?</h6>
-        </div>
+    <div class="splash">
+        <h1>ThoughtSea</h1>
+        <h6>What's on your mind?</h6>
     </div>
  </div>
 {{end}}
