--- a/templates/navbar.partial.html
+++ b/templates/navbar.partial.html
@@ -6,21 +6,25 @@
     
     <a href="/" class="brand-logo left">ThoughtSea</a>
     <ul id="nav-mobile" class="right">
-        <li><a href="/board">Board</a></li>
-        <li><a href="/about">About</a></li>
         {{if .Authenticated}}
-        <li><a class="dropdown-trigger" href="#!" data-target="dropdown1"><i class="material-icons green-lighten-1 pulse">sentiment_very_satisfied</i></a></li>
+        <li><a class="dropdown-trigger" href="#!" data-target="dropdown1">
+          <i class="material-icons">sentiment_very_satisfied</i>
+        </a></li>
         {{else}}
-        <li><a class="dropdown-trigger" href="#!" data-target="dropdown2"><i class="material-icons gray-darken-2">sentiment_neutral</i></a></li>
+        <li><a class="dropdown-trigger" href="#!" data-target="dropdown2">
+          <i class="material-icons">sentiment_very_dissatisfied</i>
+        </a></li>
         {{end}}
     </ul>
   </nav>
+
   <!-- Dropdown Structure -->
 <ul id="dropdown1" class="dropdown-content">
-    <li class="center-align"><span>{{.Name}}</span></li>
-    <li><a href="/profile">Profile</a></li>
+    <li><a href="/profile" class="blue-text">Profile</a></li>
     <li class="divider"></li>
-    <li id="logout-button"><a>Logout</a></li>
+    <li class="divider"></li>
+    <li class="divider"></li>
+    <li id="logout-button"><a class="red-text">Logout</a></li>
 </ul>
 <ul id="dropdown2" class="dropdown-content">
     <li id="login-button"><a href="#!">Log In</a></li>
@@ -35,7 +39,9 @@
     <div class="footer-copyright">
       <div class="container">
       © 2023 Your Company Name
-      <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+      <a href="https://github.com/dedpidgon/go-web-app" class="btn">
+        <i class="material-icons">github</i>
+      </a>
       </div>
     </div>
   </footer>
