--- a/templates/board.page.html
+++ b/templates/board.page.html
@@ -2,13 +2,14 @@
 
 {{define "content"}}
     <div class="row board-page">
-        <h1>This is the Board Page!!!</h1>
-        <div class="row">
+        <div class="col s12">
             {{if .Client.Authenticated}} {{template "post-creator" .Client.ID}} {{end}}
         </div>
-        <div class="row">
-            {{template "post-list" .Get.Posts}}
+        <div class="col s12">
+            {{template "post-list" .Get.Posts}} 
         </div>
-    
     </div>
 {{end}}
+
+
+
