--- a/templates/static/styles/sass/index.scss
+++ b/templates/static/styles/sass/index.scss
@@ -1,58 +1,25 @@
 @import "normalize.css";
 // @import "skeleton.css";
-@import "./theme/_variables.scss";
-@font-face {
-    font-family: 'TitleFont';
-    src: url('./fonts/Title/TitleFont.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
-}
-@font-face {
-    font-family: 'MainFont';
-    src: url('./fonts/Main/MainFont.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
-}
-@font-face {
-    font-family: 'ContentFont';
-    src: url('./fonts/Content/ContentFont.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
-}
-h1 {
-    font-family:'MainFont';
-}
-.a {
-    color:maroon
-}
 
-.col, .row, .container {
-    // border:$debug-border;
-}
+$gloria:'Gloria Hallelujah', cursive;
+$tenor:'Tenor Sans', sans-serif;
 
 .home-page, .post-page, .about-page, .board-page, .profile-page {
     max-height:90vh;
     height:100%;
+    overflow: auto;
+    scrollbar-width: 0;
 }
-.splash {
-    height:90vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-family: 'TitleFont'
+.tenor {
+    font-family: $tenor;
+}
+.gloria {
+    font-family:$gloria;
 }
 .main {
     background-image: url("/static/images/zen-02.jpg");
     background-size: cover;
     background-attachment: fixed;
-}
-
-nav {
-    font-family: 'MainFont';
-    font-size: $base-font-size;
-  .brand-logo {
-    font-family:'TitleFont';
-  }
 }
 .home-page {
     margin-top:-18px;
@@ -60,44 +27,42 @@ nav {
 #logout-button {
     cursor: pointer;
 }
-.post-list {
-    font-family: 'ContentFont';
-}
 .user {
-    padding:$base-padding;
-    margin:$base-margin;
-    font-family:'MainFont';
+    &:hover {
+        box-shadow: inset 0 0 10px yellow;
+    }
 }
 .user-list {
     max-height: 90vh;
     overflow: auto;
     scrollbar-width: none;  /* Firefox */
 }
-.col {
-}
+
 .full-width {
     width: 100vw;
     max-width: 100%;
-  }
-.home-page {
-    
-    
 }
 
-.post-list {
-    .collection-item {
-        margin:$base-margin;
-    }
-}
-.post {
-    border:$base-border-thickness groove $secondary-color;
-    padding:$base-padding;
-}
-
-body {
-    background-color:beige;
-}
 .login-button, .register-button {
     text-align: center;
-    padding:$base-padding;
+}
+.post {
+    border:2px groove rgb(59, 45, 45);
+    div:nth-child(2) {
+        display:flex;
+        flex-direction: column;
+        justify-content: space-around;
+    }
+}
+p {
+    word-wrap: break-word;
+}
+.row.equal-height {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+.forum-content {
+    font-size:2rem;
+    background-color:beige;
 }
