--- a/templates/base.layout.html
+++ b/templates/base.layout.html
@@ -5,22 +5,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&family=Tenor+Sans&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&family=Shadows+Into+Light&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="/static/styles/index.css"/>
     {{block "style" .}}{{end}}
 </head>
 <body>
-    <div class="main container full-width">
-        {{template "navbar" .Client}}
-        {{block "content" .}}{{end}}
-        {{template "footer" .Client}}
-    </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    {{template "navbar" .Client}}
+    {{block "content" .}}{{end}}
+    {{template "footer" .Client}}
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="/static/scripts/dist/bundle.js"></script>
     {{block "scripts" .}}{{end}}
@@ -29,4 +26,50 @@
 {{end}}
 {{define "chemical"}}
 <input type="hidden" id="json-data" value="{{.}}">
+{{end}}
+
+
+{{define "voting"}}
+<div class="vote-box">
+    {{if .UserHasVoted .GetClient.ID}}
+        {{if .IsUpvote .GetClient.ID}}
+
+        <a class="right vote btn-small orange" 
+        name="up" value="1" parent="{{.ID.Hex}}" model_type="{{.ModelType}}">
+            <i class="material-icons">arrow_upward</i>
+        </a>
+
+        <a class="left vote btn-small gray darken-2" 
+        name="down" value="-1" parent="{{.ID.Hex}}" model_type="{{.ModelType}}">
+            <i class="material-icons">arrow_downward</i>
+        </a>
+
+        {{else}}
+
+        <a class="right vote btn-small gray darken-2" 
+        name="up" value="1" parent="{{.ID.Hex}}" model_type="{{.ModelType}}">
+            <i class="material-icons">arrow_upward</i>
+        </a>
+
+        <a class="left vote btn-small purple" 
+        name="down" value="-1" parent="{{.ID.Hex}}" model_type="{{.ModelType}}">
+            <i class="material-icons">arrow_downward</i>
+        </a>
+
+        {{end}}
+
+    {{else}}
+
+    <a class="right vote btn-small" 
+    name="up" value="1" parent="{{.ID.Hex}}" model_type="{{.ModelType}}">
+        <i class="material-icons">arrow_upward</i>
+    </a>
+
+    <a class="left vote btn-small" 
+    name="down" value="-1" parent="{{.ID.Hex}}" model_type="{{.ModelType}}">
+        <i class="material-icons">arrow_downward</i>
+    </a>
+
+    {{end}}
+</div>
 {{end}}
