--- a/templates/navbar.partial.html
+++ b/templates/navbar.partial.html
@@ -1,47 +1,50 @@
 
-
-
 {{define "navbar"}}
 <nav class="row teal darken-1 nav-wrapper">
-    
-    <a href="/" class="brand-logo left">ThoughtSea</a>
-    <ul id="nav-mobile" class="right">
-        {{if .Authenticated}}
-        <li><a class="dropdown-trigger" href="#!" data-target="dropdown1">
-          <i class="material-icons">sentiment_very_satisfied</i>
-        </a></li>
-        {{else}}
-        <li><a class="dropdown-trigger" href="#!" data-target="dropdown2">
-          <i class="material-icons">sentiment_very_dissatisfied</i>
-        </a></li>
-        {{end}}
-    </ul>
+    <div class="container">
+      <a href="/" class="brand-logo left hide-on-small-only">ThoughtSea</a>
+      <ul id="nav-mobile" class="right">
+          <li>{{template "auth-buttons" .Authenticated}}</li>
+          <li class="gloria">{{.Name}}</li>
+          <li>{{template "auth-toggle" .Authenticated}}</li>
+      </ul>
+    </div>
   </nav>
+{{end}}
 
-  <!-- Dropdown Structure -->
-<ul id="dropdown1" class="dropdown-content">
-    <li><a href="/profile" class="blue-text">Profile</a></li>
-    <li class="divider"></li>
-    <li class="divider"></li>
-    <li class="divider"></li>
-    <li id="logout-button"><a class="red-text">Logout</a></li>
-</ul>
-<ul id="dropdown2" class="dropdown-content">
-    <li id="login-button"><a href="#!">Log In</a></li>
-    <li class="divider"></li>
-    <li id="register-button"><a href="#!">Sign Up</a></li>
-</ul>
+{{define "auth-toggle"}}
+  {{if .}}
+  <i class="material-icons">sentiment_very_satisfied</i>
+  {{else}}
+  <i class="material-icons">sentiment_very_dissatisfied</i>
+  {{end}}
+{{end}}
+
+{{define "auth-buttons"}}
+  <div id="auth-buttons">
+    <ul>
+      {{if .}}
+      <li><a href="/profile" class="btn-small white-text">Profile</a></li>
+      <li><a id="logout-button" class="btn-small red lighten-2 white-text">Logout</a></li>
+      {{else}}
+      <li><a id="login-button" class="btn-small" href="#!">Log In</a></li>
+      <li><a id="register-button" class="btn-small" href="#!">Sign Up</a></li>
+      {{end}}
+    </ul>
+  </div>
 {{end}}
 
 
 {{define "footer"}}
 <footer class="page-footer">
-    <div class="footer-copyright">
-      <div class="container">
-      © 2023 Your Company Name
-      <a href="https://github.com/dedpidgon/go-web-app" class="btn">
-        <i class="material-icons">github</i>
-      </a>
+    <div class="container">
+      <div class="row">
+        <p class="footer-copyright">
+          © 2023 ThoughtSea llc
+          <a href="https://github.com/dedpidgon/go-web-app" class="btn right">
+            <i class="fab fa-github"></i>
+          </a>
+        </p>
       </div>
     </div>
   </footer>
