--- a/templates/post.page.html
+++ b/templates/post.page.html
@@ -5,31 +5,29 @@
     {{$logged_in:= .Client.Authenticated}}
 
     {{template "chemical" .X}}
-    <div class="row post-page">
+    <div class="post-page">
         <div class="row">
-            <h1 class="center-align tenor">{{.P.Title}}</h1>
+            <h1 class="center-align blue lighten-2 white-text title">{{.P.Title}}</h1>
         </div>
+        <div class="divider"></div>
         <div class="row">
-            <p class="tenor center-align forum-content">{{.P.Content}}</p>
+            <p class="center-align content">{{.P.Content}}</p>
         </div>
         <div class="row">
             <p class="author-name gloria">{{.P.AuthorName}}</p>
         </div>
         <div class="row footer">
             {{if and $logged_in $mine}}
-                <button class="btn" id="post-updater">Update</button>
-                <button class="btn" id="post-deleter">Delete</button>
+                <a class="btn" id="post-updater">Update</a>
+                <a class="btn" id="post-deleter" value="{{.P.ID.Hex}}">Delete</a>
             {{end}}
             {{if $logged_in}}
-                <div class="vote-box">
-                    <button class="vote-button btn" upvote="true" parent="{{.P.ID.Hex}}">Like</button>
-                    <button class="vote-button btn" upvote="false" parent="{{.P.ID.Hex}}" >Dislike</button>
-                </div>
+            {{template "voting" .P}}
             {{end}}
         </div>
     </div>
     {{template "comment-list" .P.Comments }}
-    {{if and $logged_in $mine}}
-        <button id="comment-creator">Comment</button>  
+    {{if $logged_in}}
+        <a id="btn comment-creator">Comment</a>  
     {{end}}
 {{end}}
