--- a/templates/posts.partial.html
+++ b/templates/posts.partial.html
@@ -1,92 +1,73 @@
-{{define "post"}}
-{{$logged_in:= .GetClient.Authenticated}}
-{{$my_post := eq .GetClient.ID .ID}}
-<div class="col s12 {{if $my_post}} black green-text {{end}}">
-    <div class="card">
-        <div class="card-content">
-            <span class="card-title">{{.Title}}</span>
-            <p class="truncate">{{.Content}}</p>
+{{define "comment-list"}}
+<div class="container full-width">
+    <div class="row">
+        {{range .}}
+        <div class="col s12 m6">
+            <div class="card">
+                <div class="card-content grey lighten-4">
+                    <i class="material-icons comment-icon yellow darken-2 col s12">comment</i>
+                    <p class="content">{{.Content}}</p>
+                </div>
+                <div class="card-action grey lighten-3">
+                    {{if .GetClient.Authenticated}}
+                    {{template "voting" .}}
+                    {{end}}
+                    <div class="center author-tag">
+                        <span>{{.DateString}}</span>
+                        <a href="/profile/{{.AuthorID.Hex}}" class="gloria orange-text text-darken-3">
+                            - {{.AuthorName}}
+                        </a>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="card-action center-align">
-            <a href="/post/{{.ID.Hex}}"><span>Read More</span></a>
-            {{if $logged_in}}
-            {{template "voting" .}}
-            {{end}}
-        </div>
+        {{end}}
     </div>
 </div>
 {{end}}
 
 {{define "post-list"}}
-<div class="container">
+<div class="container full-width">
     <div class="row">
         {{range .}}
-        {{template "post" .}}
+        <div class="col s12 m6">
+            <div class="card">
+                <div class="card-content grey lighten-4">
+                    <a href="/post/{{.ID.Hex}}"><span class="card-title post-title blue lighten-2 white-text title center-align">{{.Title}}</span></a>
+                    <p class="content truncate">{{.Content}}</p>
+                </div>
+                <div class="card-action grey lighten-3">
+                    {{if .GetClient.Authenticated}}
+                    {{template "voting" .}}
+                    {{end}}
+                    <div class="center author-tag">
+                        <span>created : {{.DateString}}</span>
+                        <a href="/profile/{{.AuthorID.Hex}}" class="gloria orange-text text-darken-3">
+                            by : {{.AuthorName}}
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
         {{end}}
     </div>
 </div>
 {{end}}
 
 {{ define "post-creator"}}
-<div class="container z-depth-2">
-    <form id="post-creator">
-        <div class="row">
-            <div class="input-field col s12">
-                <input name="title" id="post_title" type="text" class="validate">
-                <label for="post_title">Title</label>
-            </div>
-        </div>
-        <div class="row">
-            <div class="input-field col s12">
-                <textarea name="content" id="post_content" class="materialize-textarea"></textarea>
-                <label for="post_content">Content</label>
-            </div>
-        </div>
-        <button class="btn waves-effect waves-light" type="submit">Submit
-            <i class="material-icons right">send</i>
-        </button>
-    </form>
-</div>
-
-
-<!-- <form id="post-creator">
-    <div class="form-group">
-        <label for="title">Title</label>
-        <input name="title" type="text" class="form-control black green-text" id="title" placeholder="Title">
+<form id="post-creator" class="row">
+    <div class="input-field col s12">
+        <input name="title" id="post_title" type="text" class="validate">
+        <label for="post_title">Title</label>
     </div>
-    <div class="form-group">
-        <label for="content">Content</label>
-        <textarea name="content" class="form-control black green-text" id="content" rows="3"></textarea>
+    <div class="input-field col s12">
+        <textarea name="content" id="post_content" class="materialize-textarea"></textarea>
+        <label for="post_content">Content</label>
     </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
-</form> -->
+    <button class="btn waves-effect waves-light" type="submit">Submit
+        <i class="material-icons right">send</i>
+    </button>
+</form>
 {{end}}
 
-{{define "voting"}}
-<div class="row">
-    {{if .UserHasVoted .GetClient.ID}}
-        {{if .IsUpvote .GetClient.ID}}
-        <a href="#" class="right vote btn-floating orange pulse" value="1" parent="{{.ID.Hex}}">
-            <i class="material-icons">arrow_upward</i>
-        </a>
-        <a href="#" class="left vote btn-floating gray darken-2" value="-1" parent="{{.ID.Hex}}">
-            <i class="material-icons">arrow_downward</i>
-        </a>
-        {{else}}
-        <a href="#" class="right vote btn-floating gray darken-2" value="1" parent="{{.ID.Hex}}">
-            <i class="material-icons">arrow_upward</i>
-        </a>
-        <a href="#" class="left vote btn-floating purple lighten-1 pulse" value="-1" parent="{{.ID.Hex}}">
-            <i class="material-icons">arrow_downward</i>
-        </a>
-        {{end}}
-    {{else}}
-    <a href="#" class="right vote btn-floating gray darken-2" value="1" parent="{{.ID.Hex}}">
-        <i class="material-icons">arrow_upward</i>
-    </a>
-    <a href="#" class="left vote btn-floating gray darken-2" value="-1" parent="{{.ID.Hex}}">
-        <i class="material-icons">arrow_downward</i>
-    </a>
-    {{end}}
-</div>
-{{end}}
+
