--- a/templates/static/styles/sass/index.scss
+++ b/templates/static/styles/sass/index.scss
@@ -4,65 +4,32 @@
 $gloria:'Gloria Hallelujah', cursive;
 $tenor:'Tenor Sans', sans-serif;
 
-.home-page, .post-page, .about-page, .board-page, .profile-page {
-    max-height:90vh;
-    height:100%;
-    overflow: auto;
-    scrollbar-width: 0;
-}
 .tenor {
     font-family: $tenor;
 }
 .gloria {
     font-family:$gloria;
 }
-.main {
-    background-image: url("/static/images/zen-02.jpg");
-    background-size: cover;
-    background-attachment: fixed;
-}
-.home-page {
-    margin-top:-18px;
-}
 #logout-button {
     cursor: pointer;
 }
-.user {
-    &:hover {
-        box-shadow: inset 0 0 10px yellow;
-    }
-}
-.user-list {
-    max-height: 90vh;
-    overflow: auto;
-    scrollbar-width: none;  /* Firefox */
-}
-
 .full-width {
     width: 100vw;
     max-width: 100%;
 }
 
-.login-button, .register-button {
-    text-align: center;
-}
-.post {
-    border:2px groove rgb(59, 45, 45);
-    div:nth-child(2) {
-        display:flex;
-        flex-direction: column;
-        justify-content: space-around;
-    }
-}
-p {
-    word-wrap: break-word;
-}
 .row.equal-height {
     display: flex;
     flex-wrap: wrap;
-  }
+}
 
-.forum-content {
-    font-size:2rem;
-    background-color:beige;
+.title {
+    padding:1rem;
+    font-family: $tenor;
+}
+.content {
+    font-size:1.2rem;
+    // border:1px dashed red;
+    font-family:$tenor;
+    padding:1rem;
 }
