--- a/templates/post.page.html
+++ b/templates/post.page.html
@@ -6,32 +6,30 @@
 
     {{template "chemical" .X}}
     <div class="post-page">
-        <div class="row">
-            <h1 class="center-align blue lighten-2 white-text title">
-                {{if $logged_in}}
-                {{template "voting" .P}}
-                {{end}}
+            <h1 class="blue lighten-2 white-text title center-align">
                 {{.P.Title}}
             </h1>
-        </div>
-        <div class="row">
-            <pre><p class="content">{{.P.Content}}</p></pre>
-        </div>
-        <div class="row">
-            <p class="author-name gloria">{{.P.AuthorName}}</p>
-        </div>
-        <div class="row footer">
-            {{if and $logged_in $mine}}
-                <a class="btn-large blue accent-4 waves-effect" id="post-updater">Update</a>
-                <a class="btn-large red waves-effect" id="post-deleter" value="{{.P.ID.Hex}}">Delete</a>
-                {{if $logged_in}}
-                <a class="btn-large yellow darken-2 black-text" id="comment-creator">
-                    Comment <i class="material-icons right">comment</i>
-                </a>  
-                {{end}} 
+        
+            <pre style="white-space: pre-wrap;"><p class="content">{{.P.Content}}</p></pre>
+            <p class="author-name gloria"> ~ {{.P.AuthorName}} : {{template "score" .P.Score}}</p>
+            {{if $logged_in}}
+            {{template "voting" .P}}
             {{end}}
+    
+            {{if and $logged_in $mine}}
+                <a 
+                class="btn-large blue accent-4 waves-effect" id="post-updater">Update</a>
+                <a class="btn-large red waves-effect" id="post-deleter" value="{{.P.ID.Hex}}">Delete</a>
+            {{end}}
+            {{if $logged_in}}
+            <a 
+            class="btn-large yellow darken-2 black-text" 
+            id="comment-creator" parent="{{.P.ID.Hex}}">
+                Comment <i class="material-icons right">comment</i>
+            </a>  
+            {{end}} 
 
-        </div>
+        
     </div>
     {{template "comment-list" .P.Comments }}
 {{end}}
