--- a/templates/profile.page.html
+++ b/templates/profile.page.html
@@ -4,10 +4,13 @@
 <div class="row profile-page">
     <div class="container">
         <div class="row">
-            <h1 class="gloria">{{.U.Name}}</h1>
-            <h3 class="gloria">{{.U.Email}}</h3>
-        </div>
-        <div class="row">
+            <div>
+                <h1 class="gloria">{{.U.Name}}</h1>
+                <h3 class="gloria">{{.U.Email}}</h3>
+                {{if and .Client.Authenticated (eq .Client.ID .U.ID)}}
+                <span>verified : {{.U.Verified}} {{if not .U.Verified}} <a href="/api/users/resend/{{.U.ID.Hex}}" class="btn">Resend <i class="material-icons right">send</i></a> {{end}}</span>
+                {{end}}
+            </div>
             <p class="tenor">{{.U.Bio}}</p>
         </div>
         {{if .Client.Authenticated}}
@@ -22,7 +25,7 @@
         <ul class="tabs">
             <li class="tab col s6"><a class="active" href="#test1">Posts</a></li>
             <li class="tab col s6"><a href="#test2">Comments</a></li>
-          </ul>
+        </ul>
         </div>
         <div id="test1" class="col s12">
             {{template "post-list" .U.Posts}}
